<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddbc95"
    tools:context="kmitl.playstory.pattasing.playstory.controller.AddStoryDate">

    <android.support.v4.view.ViewPager
        android:id="@+id/label_bar"
        android:layout_width="435dp"
        android:layout_height="46dp"
        android:background="#626D71" />

    <TextView
        android:id="@+id/textAddTimeStory"
        android:layout_width="255dp"
        android:layout_height="43dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/waffle_regular"
        android:gravity="center|left"
        android:text="Add Your Time Story"
        android:textColor="#ddbc95"
        android:textSize="40dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/label_bar_low"
        android:layout_width="492dp"
        android:layout_height="40dp"
        android:background="#626D71"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/textSaveDate"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:background="@drawable/border_image"
        android:fontFamily="@font/waffle_regular"
        android:gravity="center"
        android:text="Save"
        android:textColor="#f1f3ce"
        android:textSize="30dp"
        android:onClick="buttonAddDiary"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/textCancelDate"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:background="@drawable/border_image"
        android:fontFamily="@font/waffle_regular"
        android:gravity="center"
        android:text="Cancel"
        android:textColor="#f1f3ce"
        android:textSize="30dp"
        android:onClick="buttonCancelDate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/label_bar"
        android:layout_above="@+id/label_bar_low"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            >
            <TextView

            android:id="@+id/textDateSelect"
            android:layout_width="54dp"
            android:layout_height="36dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/waffle_regular"
            android:gravity="left"
            android:text="Date : "
            android:textColor="#626d71"
            android:textSize="30dp"
            />

            <TextView
                android:id="@+id/textDateShow"
                android:layout_marginLeft="50dp"
                android:layout_width="208dp"
                android:layout_height="37dp"
                android:background="@drawable/border_image"
                android:fontFamily="@font/waffle_regular"
                android:onClick="dateShow"
                android:text="date"
                android:textColor="#626d71"
                android:textSize="30dp"
                />


        </LinearLayout>
        <Button
            android:id="@+id/buttonDatePick"

            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@drawable/border_time"
            android:fontFamily="@font/waffle_regular"
            android:gravity="center"
            android:onClick="datePick"
            android:text="pick date"
            android:textColor="#626d71"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textCha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/waffle_regular"
                android:text="Character : "
                android:textColor="#626d71"
                android:textSize="30dp"
                />
            <ImageView
                android:background="@drawable/border_time"
                android:id="@+id/imageInAddIcon"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="28dp"
                android:onClick="buttonAddIcon"
                app:srcCompat="@mipmap/add" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textStoryTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"

                android:layout_alignParentLeft="true"
                android:fontFamily="@font/waffle_regular"
                android:text="Story : "
                android:textColor="#626d71"
                android:textSize="30dp"
                />
            <ImageView
                android:id="@+id/imageIconAdd"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:onClick="buttonAddTimeStory"
                app:srcCompat="@mipmap/add" />


        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listTimeDiary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="#dfb38867"
           />

    </LinearLayout>



</RelativeLayout>
