...
        android:id="@+id/textMyStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/waffle_regular"
        android:text="My Story"
        android:textColor="#626d71"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

    <Button
...
        android:text="Logout"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

    <ImageView
        android:id="@+id/imageAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="276dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/listDate"
...
